common-applications/test-environment/openguardfuzz-webserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openguardfuzz-webserver
  name: openguardfuzz-webserver
